--- a/liveeducation.html
+++ b/liveeducation.html
@@ -740,10 +740,10 @@
 
 <!--live courses-->
 <!--subscribe section-->
-    <section class="subscribing-area">
+<section class="subscribing-area">
         <div class="pb-5">
-            <div class="container bg-color">
-                <div class="row  mt-5 pb-5">
+            <div class="main-area extea">
+                <div class="row bg-color">
                     <div class="col-6  mt-3 Subscribe">
                         <p>Subscribe</p>
                     </div>
@@ -765,7 +765,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
 <!--footer overall-->
