--- a/academiclandingpageemergingtrends.html
+++ b/academiclandingpageemergingtrends.html
@@ -581,10 +581,10 @@
     </section>
 <!--hands on training-->
 <!--subscribe section-->
-    <section class="subscribing-area">
+<section class="subscribing-area">
         <div class="pb-5">
-            <div class="container bg-color">
-                <div class="row  mt-5 pb-5">
+            <div class="main-area extea">
+                <div class="row bg-color">
                     <div class="col-6  mt-3 Subscribe">
                         <p>Subscribe</p>
                     </div>
@@ -596,17 +596,17 @@
                         <hr>
                         <div class="Subscribe1">
                             <p>
-                                    Nullam sagittis pharetra ante, a convallis mauris euismod vel. Nullam quis diam ut urna euismod pellentesque.<br>
-                                    <br>In nisl quam, accumsan eget ligula vestibulum, tincidunt sollicitudin sem.
-                                     Vivamus mollis sapien sed neque fringilla vehicula. Suspendisse nec mattis massa.
-                                     Vivamus id elit nec purus efficitur tempus sed sed orci. In sem metus, suscipit ac tincidunt quis,
-                                     mattis ac libero. Maecenas sit amet venenatis mi, vitae placerat justo.
+                                Nullam sagittis pharetra ante, a convallis mauris euismod vel. Nullam quis diam ut urna euismod pellentesque.<br>
+                                <br>In nisl quam, accumsan eget ligula vestibulum, tincidunt sollicitudin sem.
+                                Vivamus mollis sapien sed neque fringilla vehicula. Suspendisse nec mattis massa.
+                                Vivamus id elit nec purus efficitur tempus sed sed orci. In sem metus, suscipit ac tincidunt quis,
+                                mattis ac libero. Maecenas sit amet venenatis mi, vitae placerat justo.
                             </p>
                         </div>
-                    </div>    
+                    </div>
                 </div>
             </div>
-            
+    
         </div>
     </section>
 <!--footer overall-->
