--- a/academylandingpagepainmanagement.html
+++ b/academylandingpagepainmanagement.html
@@ -603,10 +603,10 @@
     </section>
 <!--hands on training-->
 <!--subscribe section-->
-    <section class="subscribing-area">
+<section class="subscribing-area">
         <div class="pb-5">
-            <div class="container bg-color">
-                <div class="row  mt-5 pb-5">
+            <div class="main-area extea">
+                <div class="row bg-color">
                     <div class="col-6  mt-3 Subscribe">
                         <p>Subscribe</p>
                     </div>
@@ -628,7 +628,7 @@
                     </div>
                 </div>
             </div>
-
+    
         </div>
     </section>
 <!--footer overall-->
