--- a/homepagestories.html
+++ b/homepagestories.html
@@ -723,14 +723,15 @@
                     </div>
                   </div>
                   </section>
-                <!--subscribe section-->
-    <section class="mt-6">
+         <!--subscribe section-->
+<section class="subscribing-area">
         <div class="pb-5">
-            <div class="container bg-color  pt-3 ">
-                <div class="row  mt-5 pb-5">
-                    <div class="col-1 Subscribe"></div>
-                    <div class="col-6  mt-3 Subscribe">Subscribe</div>
-                    <div class="col-5 mt-6 ">
+            <div class="main-area extea">
+                <div class="row bg-color">
+                    <div class="col-6  mt-3 Subscribe">
+                        <p>Subscribe</p>
+                    </div>
+                    <div class="col-5 second-subscribe">
                         <div class="Subscribe1">
                             <span>input</span>
                             <span class="float-right">Sign Up</span>
@@ -738,19 +739,20 @@
                         <hr>
                         <div class="Subscribe1">
                             <p>
-                                    Nullam sagittis pharetra ante, a convallis mauris euismod vel. Nullam quis diam ut urna euismod pellentesque.<br>
-                                    <br>In nisl quam, accumsan eget ligula vestibulum, tincidunt sollicitudin sem.
-                                     Vivamus mollis sapien sed neque fringilla vehicula. Suspendisse nec mattis massa.
-                                     Vivamus id elit nec purus efficitur tempus sed sed orci. In sem metus, suscipit ac tincidunt quis,
-                                     mattis ac libero. Maecenas sit amet venenatis mi, vitae placerat justo.
+                                Nullam sagittis pharetra ante, a convallis mauris euismod vel. Nullam quis diam ut urna euismod pellentesque.<br>
+                                <br>In nisl quam, accumsan eget ligula vestibulum, tincidunt sollicitudin sem.
+                                Vivamus mollis sapien sed neque fringilla vehicula. Suspendisse nec mattis massa.
+                                Vivamus id elit nec purus efficitur tempus sed sed orci. In sem metus, suscipit ac tincidunt quis,
+                                mattis ac libero. Maecenas sit amet venenatis mi, vitae placerat justo.
                             </p>
                         </div>
-                    </div>    
+                    </div>
                 </div>
             </div>
-            
+    
         </div>
     </section>
+
 <!--footer overall-->
 <section>  
     <footer class="footer mt-5 pb-5 ">
