--- a/academiclandingpageemergingtrends.html
+++ b/academiclandingpageemergingtrends.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/academiclandingpageemergingtrends.css" />
+    
     <link rel="stylesheet" href="css/academylandingcombine.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -15,7 +15,7 @@
 </head>
 <body>
     <!--this the main header dog and girl wala section -->
-    <section class="hero" id="hero">
+    <section class="hero" id="hero-trends">
         <div class="container">
             <div class="row">
                 <div class="col-2 white-color headerlogo" >
@@ -56,7 +56,7 @@
                     <div class="row"><a href="#">blog</a></div>
                     <div class="row"><a href="#">support</a></div>
             </div>
-            <div class="col-9 secondnav1 text-right lg-text logo-one"><p>EMERGING TRENDS</p></div>
+            <div class="col-9 secondnav1 text-right lg-text logo-one"  id="logo-one-trends"><p>EMERGING TRENDS</p></div>
             </div>
         </div>           
         
@@ -74,7 +74,7 @@
         </div>
     </section>
     <!--the two dives-->
-<section class="the-three-dives">
+<section class="the-three-dives" id="the-three-dives-trends">
     <div class="main-area">
         <div class="row">
             <div class=" col-4 col1 two-div1" >
@@ -252,7 +252,7 @@
     </div>
 </section>
 <!--slider2-->
-<section class="three-slider pt-6   ">
+<section class="three-slider pt-6   " id="three-slider-trends">
     <div class="container">
         <div class="row rowone "> 
             <div class="col-6 row-one  m-0" ><p>Emerging Trends<span class="white-color pl-5">Top videos</span></p></div>
