--- a/academylandingpage.html
+++ b/academylandingpage.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <!--this the main header dog and girl wala section -->
-    <section class="hero" id="hero">     
+    <section class="hero" id="hero-alp">     
         <div class="container">
             <div class="row">
                 <div class="col-2 white-color headerlogo" >
@@ -58,7 +58,7 @@
                     <div class="row"><a href="#">blog</a></div>
                     <div class="row"><a href="#">support</a></div>
             </div>
-            <div class="col-9 secondnav1 text-right lg-text logo-one"> <p>BUSINESS</p></div>
+            <div class="col-9 secondnav1 text-right lg-text logo-one" id="logo-one-alp"> <p>BUSINESS</p></div>
             </div>
         </div>
             <div class="col-12 container text-right pb-3 secondnav1">
@@ -75,7 +75,7 @@
         </div>
     </section>
     <!--the two dives-->
-<section class="the-three-dives">
+<section class="the-three-dives" id="the-three-dives-alp">
     <div class="main-area">
         <div class="row">
             <div class=" col-4 col1 two-div1" >
@@ -251,7 +251,7 @@
     </div>
 </section>
 <!--slider2-->
-<section class="three-slider pt-5   ">
+<section class="three-slider pt-5 " id="three-slider-alp">
     <div class="container">
         <div class="row rowone "> 
             <div class="col-6 row-one " ><p>School of Business <span class="white-color pl-5">Top videos</span></p></div>
