--- a/academylandingpagepainmanagement.html
+++ b/academylandingpagepainmanagement.html
@@ -16,7 +16,7 @@
     
 </head>
 <body>
-    <section class="hero" id="hero">     
+    <section class="hero" id="hero-pain">     
         <div class="container">
             <div class="row">
                 <div class="col-2 white-color headerlogo" >
@@ -57,7 +57,7 @@
                     <div class="row"><a href="#">blog</a></div>
                     <div class="row"><a href="#">support</a></div>
             </div>
-            <div class="col-9 secondnav1 text-right lg-text logo-one"> <p>Pain Management</p></div>
+            <div class="col-9 secondnav1 text-right lg-text logo-one" id="logo-one-pain"> <p>Pain Management</p></div>
             </div>
             <div class="col-12 container text-right pb-3 secondnav1">
                 Robe McNamara; Summer intern, w/ Chance; her 9yr old mixed breed
@@ -74,12 +74,12 @@
         </div>
     </section>
     <!--the two dives-->
-    <section class="the-three-dives">
+    <section class="the-three-dives" id="the-three-dives-pain">
         <div class="main-area">
             <div class="row">
                 <div class=" col-4 col1 two-div1 hite-one" >
-                    <div class="container mt-5 ml-5 hite-one">
-                        <div class="row mt-5 aligninng hite-one">
+                    <div class="container  ml-5 hite-one">
+                        <div class="row  aligninng hite-one">
                             <p class="two-div-1"><a href="#" class="white-color"> LiteCure Academy</a></p>
                             <p class="two-div-1"><a href="#" class="white-color">Pain Management</a></p>
                             <p class="two-div-1"><a href="#">Minimally Invasive</a></p>
@@ -250,7 +250,7 @@
     </div>
 </section>
 <!--slider2-->
-<section class="three-slider pt-5   ">
+<section class="three-slider pt-5" id="three-slider-pain">
     <div class="container">
         <div class="row rowone "> 
             <div class="col-6 row-one " ><p>Pain Management <span class="white-color pl-5">Top videos</span></p></div>
