--- a/academylandingwellness.html
+++ b/academylandingwellness.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family-Raleway:400,800" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/academylandingwelless.css" />
     <link rel="stylesheet" href="css/academylandingcombine.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -17,7 +16,7 @@
 </head>
 <body>
     <!--this the main header dog and girl wala section -->
-    <section class="hero" id="hero">     
+    <section class="hero" id="hero-wellness">     
         <div class="container">
             <div class="row">
                 <div class="col-2 white-color headerlogo" >
@@ -58,7 +57,7 @@
                     <div class="row"><a href="#">blog</a></div>
                     <div class="row"><a href="#">support</a></div>
             </div>
-            <div class="col-9 secondnav1 text-right lg-text logo-one"> <p>WELLNESS</p></div>
+            <div class="col-9 secondnav1 text-right lg-text logo-one" id="logo-one-well"> <p>WELLNESS</p></div>
             </div>           
         
             <div class="col-12 container text-right pb-3 secondnav1">
@@ -75,7 +74,7 @@
         </div>
     </section>
     <!--the two dives-->
-<section class="the-three-dives">
+<section class="the-three-dives" id="the-three-dives-well">
     <div class="main-area">
         <div class="row">
             <div class=" col-4 col1 two-div1" >
@@ -251,7 +250,7 @@
     </div>
 </section>
 <!--slider2-->
-<section class="three-slider pt-5   ">
+<section class="three-slider pt-5" id="three-slider-well">
     <div class="container">
         <div class="row rowone "> 
             <div class="col-6 row-one " ><p>Wellness<span class="white-color pl-5">Top videos</span></p></div>
