--- a/academyminimallyinvasive.html
+++ b/academyminimallyinvasive.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <!--this the main header dog and girl wala section -->
-    <section class="hero" id="hero">
+    <section class="hero" id="hero-invasive">
         <div class="container">
             <div class="row">
                 <div class="col-2 white-color headerlogo" >
@@ -57,7 +57,7 @@
                     <div class="row"><a href="#">blog</a></div>
                     <div class="row"><a href="#">support</a></div>
             </div>
-            <div class="col-9 secondnav1 text-right lg-text logo-one"><p>MINIMALLY INVASIVE</p></div>
+            <div class="col-9 secondnav1 text-right lg-text logo-one" id="logo-one-invasive"><p>MINIMALLY INVASIVE</p></div>
             </div>
             <div class="col-12 container text-right pb-5 secondnav1">
                 Robe McNamara; Summer intern, w/ Chance;her 9yr old mixed breed
@@ -73,7 +73,7 @@
         </div>
     </section>
     <!--the two dives-->
-<section class="the-three-dives">
+<section class="the-three-dives" id="the-three-dives-invasive">
     <div class="main-area">
         <div class="row">
             <div class=" col-4 col1 two-div1" >
@@ -249,7 +249,7 @@
     </div>
 </section>
 <!--slider2-->
-<section class="three-slider pt-6   ">
+<section class="three-slider pt-6" id="three-slider-invasive">
     <div class="container">
         <div class="row rowone "> 
             <div class="col-6 row-one  m-0" ><p>Minimally Invasive <span class="white-color pl-5">Top videos</span></p></div>
