--- a/academiclandingpage01.html
+++ b/academiclandingpage01.html
@@ -7,7 +7,6 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/academiclandingpage01.css" />
     <link rel="stylesheet" href="css/academylandingcombine.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -16,7 +15,7 @@
 </head>
 <body>
     <!--this the main header dog and girl wala section -->
-    <section class="hero" id="hero">     
+    <section class="hero" id="hero01">     
         <div class="container">
             <div class="row">
                 <div class="col-2 white-color headerlogo" >
@@ -74,7 +73,7 @@
         </div>
     </section>
     <!--the two dives-->
-<section class="the-three-dives">
+<section class="the-three-dives" id="the-three-dives01">
     <div class="main-area">
         <div class="row">
             <div class=" col-4 col1 two-div1" >
@@ -245,7 +244,7 @@
     </div>
 </section>
 <!--slider2-->
-<section class="three-slider pt-6   ">
+<section class="three-slider pt-6" id="three-slider01">
     <div class="container">
         <div class="row rowone "> 
             <div class="col-6 row-one " ><p><span class="white-color ">Top videos</span></p></div>
