--- a/academylandingwellness.html
+++ b/academylandingwellness.html
@@ -16,10 +16,9 @@
 </head>
 <body>
     <!--this the main header dog and girl wala section -->
-    <section class="hero" id="hero-wellness">     
         <div class="container">
             <div class="row">
-                <div class="col-2 white-color headerlogo" >
+                <div class=Pain Management"col-2 white-color headerlogo" >
                     <img src="assets/logos/whitelitecure.png" width="144px" height="52px" alt="companion">
                 </div>
                 <div class="col-10 text-right pl-5 headerlogo1  logo" >ACADEMY</div>
