--- a/storiesarchivepage.html
+++ b/storiesarchivepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-    <title>Stories Landing Page</title>
+    <title>Stories Archive Page</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
@@ -73,7 +73,7 @@
     </section>
     <!--the two dives-->
 <section class="the-three-dives">
-    <div class="main-area">
+    <div class="main-area image-manage">
         <div class="row">
             <div class=" col-4 col1 two-div1" >
                     <div class="container hite-one">
@@ -91,10 +91,11 @@
                         <div class="row"><p class="two-div-2"><a href="#">Pet Owners</a></p></div>
                     </div>
                 </div>     
-            </div>     
+            </div>
+            <img src="assets/machine.png" class="ctx-image1" >     
         </div>
     </div>
-    <img src="assets/141888_CTX.png" class="ctx-image1" >    
+        
 </section>
 <section class="ctx-section">
     <div class="container">
@@ -115,7 +116,7 @@
                                    
                                 </div>
                                 <div class=" ctx-text ">
-                                <p class="">The <span class="ctx-itself">CTX-9</span> is our smallest<br> Companion laser; perfect for <br>practices looking for a <br>rapid return on their <br>photobiomodulation investment,<br> along with reliable clinical <br> successes.
+                                <p class="">The <span class="ctx-itself">CTX-9</span> is our smallest <br> Companion laser; perfect  <br> for practices looking for a  <br> rapid return on their  <br> photobiomodulation investment,  <br> along with reliable clinical <br> successes.
                                 </p>
                                 </div>
                                 <div class="ctx-image">
