--- a/storieslandingpage.html
+++ b/storieslandingpage.html
@@ -73,7 +73,7 @@
     </section>
     <!--the two dives-->
 <section class="the-three-dives">
-    <div class="main-area">
+    <div class="main-area image-manage">
         <div class="row">
             <div class=" col-4 col1 two-div1" >
                     <div class="container hite-one">
@@ -91,10 +91,11 @@
                         <div class="row"><p class="two-div-2"><a href="#">Pet Owners</a></p></div>
                     </div>
                 </div>     
-            </div>     
+            </div>
+            <img src="assets/141888_CTX.png" class="ctx-image1" >     
         </div>
     </div>
-    <img src="assets/141888_CTX.png" class="ctx-image1" >    
+        
 </section>
 <section class="ctx-section">
     <div class="container">
