--- a/dashboard.html
+++ b/dashboard.html
@@ -106,16 +106,16 @@
                     </div>
                 </div> 
             </div>
+            <!--the empty red -->
+            <section class="bgcolor">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 bgcolor "></div>
+                    </div>
+                </div>
+            </section>
+            <div class="bottom-down"></div>
         </section>
-        <!--the empty red -->
-        <section class="bgcolor">
-            <div class="container">
-            <div class="row">
-                <div class="col-12 bgcolor "></div>
-            </div>
-            </div>
-        </section>
-        <div class="bottom-down"></div>
     </div>
 <!--the section which is hidden -->
 <!--this the main header dog and girl wala section -->
@@ -150,8 +150,7 @@
 </section>
 <!--the menu -->
 <section class="menudiv ">
-    <div class="style1"></div>
-    <div class="container">
+    <div class="main-area">
         <div class="row">
             <div class="col-2 style " onclick="hide()">                
                 <p> <i class="fa fa-plus mr-4 " ></i><span class="mt-3">MENU</span></p>
