--- a/productdetails2.html
+++ b/productdetails2.html
@@ -160,7 +160,7 @@
             <div class="new-ctx-third">
                     <div class="col-12 text-right play-logo ">
                         <div class="arrow-img">
-                            <img src="assets/arrows.png" alt="play">
+                            <img src="assets/arrow1.png" alt="play">
                         </div>
                         <p>Watch Video Now</p>    
                     </div>
