--- a/publication.html
+++ b/publication.html
@@ -91,7 +91,7 @@
                  
                  <div><button class="download-button">DOWNLOAD PDF</button></div>
                  <div class="footer-div">
-                     <p>Resourse 2/3</p>
+                     <p>Resourse 2 of 3</p>
                      <p>Author Name Here</p>
                  </div>
                  <div class="footer-div-relation">
@@ -176,7 +176,7 @@
 
 
 
-            <div>
+            <div class="text-side">
                 <div class="las-vegas">
                     <p>Planning to visit Las Vegas or any other vacational resort where casinos are a major portion of their business</p>       
                 </div>
