--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/blog.css" />
-    <link rel="stylesheet" href="css/men.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -45,7 +44,7 @@
     <div class="style1"></div>
     <div class="container">
         <div class="row">
-            <div class="col-2 style " onclick="hide()">                
+            <div class=" style " onclick="hide()">                
                 <p> <i class="fa fa-plus mr-4 " ></i><span class="mt-3">MENU</span></p>
             </div>
         </div>
@@ -89,6 +88,8 @@
             </div>
         </div>
 
+     <!-- slider-area start-->
+
     <section class="slider-area">
               <div class="slider-container">
             <div id="myCarousel" class="carousel slide" data-ride="">
@@ -127,11 +128,12 @@
                   
                   <a class="right " href="#myCarousel" data-slide="next">
                         <div  class="slidericon2">
-                            <i class="fa fa-angle-right" ></i>
+                            <img src="assets/slider-right-arrow.png">
                         </div>
                   </a>
                 </div>
                 </section>
+                <!-- slider-area end-->
                 <section>
                     <div class="product-area">
                                     <div class=" text1">
@@ -146,7 +148,7 @@
                                     </div>
                                     <div class="specification">
                                     
-                                         <p class="paragraph">
+                                         <p class="paragraph1">
                                             A Large Pad of Notes: Yes. Just like in the movies. Carry a large bundle of notes with you and keep them in plain sight. You do not have to really take with you that much. Instead, take a few notes and place them at the top and at the bottom of real note-size paper cuttings. Just remember to never expose this while you are in the casino. Use other notes you’re your wallet instead. But do it nonchalantly so that none of the casino personnel will notice.<br><br>
 
                                             Always Flash Your Notes Around: No matter where you go, whether its to the hotel restaurant for lunch or for to the bar. They will be watching. From time to time, use that money to play at a range of table games or video game and bet some of that money. Remember you must use some of your money to play but just do not use all of it. 4) Play Complicated Games:<br><br>
@@ -164,7 +166,7 @@
                         <div class="user-container">
                             <ul>
                                 <li><span class="respon">Responses</span></li>
-                                <li><i class="fa fa-user-o"></i> &nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="name" placeholder="Write a response..." class="input"></li><hr><br><br><br>
+                                <li><i class="fa fa-user-o"></i> &nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="name" placeholder="Write a response..." class="input"></li><hr class="hr"><br><br><br>
                                 <li><i class="fa fa-user-o"></i> &nbsp;&nbsp;&nbsp;&nbsp;<span>Aug 21</span><p class="lcd">LCD screens are uniquely modern in style, and the liquid crystals that <br> make them work have allowed humanity to create slimmer, more <br> portable technology than we’ve ever had access to before.</p></li>
                                 <li><i class="fa fa-user-o"></i>&nbsp;&nbsp;&nbsp;&nbsp; <input type="text" name="name" placeholder="Write a response..." class="input2"></li>
                             </ul>
