--- a/dashboard.html
+++ b/dashboard.html
@@ -18,6 +18,7 @@
 </head>
 <body>
 <!--the manu which is hidden-->
+
 <div id="hidden" class="menu"   >
     <section class="hero" id="hero1">
         <div class="custom-container">
@@ -28,7 +29,7 @@
                 <div class="headerlogo1 logo"><p>CLOSE<span><i class="fa fa-close"></i></span></p></div>
             </div>
             <div class="container-2-one">
-                <div class=" white-color secondnav left-list text-left ">
+                <div class=" white-color secondnav left-list">
                     <div class="outer-row custom-row">
                         <div class="evidence-menu" data-show="fade-1"><a href="#">evidence</a></div>
                         <div class="give-margin fade-1 evidence" >
