--- a/home.html
+++ b/home.html
@@ -144,6 +144,7 @@
 </div>
 <!--the section which is hidden -->
 <!--this is the main header section -->
+<div id="showen">
 <section class="hero" id="hero">
     <div class="main-container">
         <div class="container-1">
@@ -1084,6 +1085,7 @@
         </div>
     </div>
 </section>
+</div>
 <!--footer overall end-->
 <script src="js/jquery.min.js"></script>
 <script src="js/tether.min.js"></script>
