--- a/blog.html
+++ b/blog.html
@@ -167,16 +167,15 @@
     </div>
 </section>
 <!--the menu -->
-<section class="menudiv ">
-    <div class="style1"></div>
-    <div class="container">
-        <div class="row">
-            <div class=" style show-menu">
-                <p> <i class="fa fa-plus mr-4 " ></i><span class="mt-3">MENU</span></p>
+    <section class="menudiv ">
+        <div class="custom-container">
+            <div class="custom-row">
+                <div class="style show-menu">
+                    <p> <i class="fa fa-plus  " ></i><span class="mt-3">MENU</span></p>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 <!-- the menu-->
 <!--the next brown -->
 <section class="article-area">
